# plux

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac  plux.vim
.github/workflows/: codeql.yml
CMake/: config.h.in
data/: CMakeLists.txt  stdlib.pluxinc
src/: CMakeLists.txt  Makefile.am  cfg.cc  cfg.hh  compat.h  forkpty.cc  function.hh  line.cc  line.hh  log.cc  log.hh  main.cc  os.cc  os.hh  output_format.cc  output_format.hh  plux.cc  plux.hh  process.cc  process.hh  process_base.cc  process_base.hh  regex.cc  regex.hh  script.cc  script.hh  script_env.cc  script_env.hh  script_header.cc  script_header.hh  script_parse.cc  script_parse.hh  script_run.cc  script_run.hh  shell.cc  shell.hh  shell_ctx.cc  shell_ctx.hh  shell_log.cc  shell_log.hh  (+5 more)
stdlib/: CMakeLists.txt  Makefile.am  gen_stdlib_builtins.sh  gen_stdlib_builtins.sh.in  nothing.pluxinc  sh-calc.pluxinc  sh-eval.pluxinc  sh-if-else.pluxinc  sh-if.pluxinc  sh-nok.pluxinc  sh-ok.pluxinc  sh-which.pluxinc
test/: CMakeLists.txt  Makefile.am  plux.plux  test.hh  test_log.cc  test_plux.cc  test_regex.cc  test_script.cc  test_script_output_format.hh  test_script_parse.cc  test_script_run.cc  test_str.cc  test_timeout.cc  test_util.cc
test/plux/: basic.plux  error.plux  include_fun.pluxinc  include_invalid.pluxinc  invalid.plux  timeout.plux  variable.plux
test/system/: CMakeLists.txt  Makefile.am  basic.plux  colors.plux  error_include_invalid.plux  error_include_missing.plux  function.plux  include.plux  include_var.pluxinc  output_format.plux  output_format_echo.c  process.plux  process_args.sh  process_echo.sh  shell_hook_init.plux  shell_hook_init_missing.plux
