bin_PROGRAMS = plux
plux_SOURCES = \
    cfg.cc cfg.hh \
    compat.h \
    forkpty.cc \
    function.hh \
    line.cc line.hh \
    log.cc log.hh \
    main.cc \
    os.cc os.hh \
    plux.cc plux.hh \
    process.cc process.hh \
    process_base.cc process_base.hh \
    regex.cc regex.hh \
    script.cc script.hh \
    script_env.cc script_env.hh \
    script_header.cc script_header.hh \
    script_parse.cc script_parse.hh \
    script_run.cc script_run.hh \
    shell.cc shell.hh \
    shell_ctx.cc shell_ctx.hh \
    shell_log.cc shell_log.hh \
    str.cc str.hh \
    timeout.cc timeout.hh
plux_CXXFLAGS = -I../stdlib

EXTRA_DIST = CMakeLists.txt
