EXTRA_DIST = CMakeLists.txt \
	     plux.plux \
	     test.hh \
	     test_log.cc \
	     test_plux.cc \
	     test_script.cc \
	     test_script_parse.cc \
	     test_script_run.cc \
	     test_str.cc \
	     test_timeout.cc \
	     system/basic.plux \
	     system/colors.plux \
	     system/error.plux \
	     system/error_include_invalid.plux \
	     system/error_include_missing.plux \
	     system/function.plux \
	     system/include.plux \
	     system/include_fun.pluxinc \
	     system/include_invalid.pluxinc \
	     system/include_var.pluxinc \
	     system/invalid.plux \
	     system/shell_hook_init.plux \
	     system/shell_hook_init_missing.plux \
	     system/timeout.plux \
	     system/variable.plux
