if TESTS
noinst_PROGRAMS = output_format_echo
output_format_echo_SOURCES = output_format_echo.c
endif

EXTRA_DIST = CMakeLists.txt \
	     basic.plux \
	     colors.plux \
	     error.plux \
	     error_include_invalid.plux \
	     error_include_missing.plux \
	     function.plux \
	     include.plux \
	     include_fun.pluxinc \
	     include_invalid.pluxinc \
	     include_var.pluxinc \
	     invalid.plux \
	     shell_hook_init.plux \
	     shell_hook_init_missing.plux \
	     timeout.plux \
	     variable.plux \
	     output_format_echo.c \
	     process_args.sh \
	     process_echo.sh
